# z4j-django

./: CHANGELOG-1.x-legacy.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/z4j_django/: __init__.py  __main__.py  admin.py  apps.py  auth.py  checks.py  cli.py  config.py  context.py  declarative.py  discovery.py  framework.py  signals.py
src/z4j_django/management/commands/: z4j_check.py  z4j_doctor.py  z4j_reconcile.py  z4j_restart.py  z4j_status.py
tests/unit/: conftest.py  test_checks.py  test_config.py  test_context.py  test_declarative.py  test_discovery.py  test_framework.py
