[project]
name = "z4j-django"
version = "1.0.7"
description = "z4j Django framework adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "django", "celery", "task"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    # Floors bumped for v1.0.7's new Low-2 buffer-path clamp
    # (promoted to public in z4j-bare 1.0.7::storage.clamp_buffer_path)
    # + Medium-2 longpoll agent_id validator (z4j-core 1.0.5).
    "z4j-core>=1.0.5",
    "z4j-bare>=1.0.7",
    # Django 5.2 LTS is the newest Django line that still supports
    # Python 3.10 / 3.11. Django 6.0 dropped 3.11 support (requires
    # >=3.12). Pinning to the 5.2 LTS line keeps z4j-django installable
    # across our full 3.11 / 3.12 / 3.13 / 3.14 matrix. Django 5.2 is
    # itself LTS with security patches through April 2028.
    "django>=5.2.13",
]

[project.optional-dependencies]
# Canonical engine bundles. `pip install z4j-django[celery]` pulls
# the engine adapter AND its companion scheduler in one shot, so a
# fresh install never needs a second command.
celery   = ["z4j-celery>=1.0.2",   "z4j-celerybeat>=1.0.2"]
rq       = ["z4j-rq>=1.0.1",       "z4j-rqscheduler>=1.0.1"]
dramatiq = ["z4j-dramatiq>=1.0.1", "z4j-apscheduler>=1.0.1"]
huey     = ["z4j-huey>=1.0.1",     "z4j-hueyperiodic>=1.0.1"]
arq      = ["z4j-arq>=1.0.1",      "z4j-arqcron>=1.0.1"]
taskiq   = ["z4j-taskiq>=1.0.1",   "z4j-taskiqscheduler>=1.0.1"]
# Every engine in one shot - useful for CI matrices that exercise
# all adapters against a Django host.
all = [
    "z4j-celery>=1.0.2",   "z4j-celerybeat>=1.0.2",
    "z4j-rq>=1.0.1",       "z4j-rqscheduler>=1.0.1",
    "z4j-dramatiq>=1.0.1", "z4j-apscheduler>=1.0.1",
    "z4j-huey>=1.0.1",     "z4j-hueyperiodic>=1.0.1",
    "z4j-arq>=1.0.1",      "z4j-arqcron>=1.0.1",
    "z4j-taskiq>=1.0.1",   "z4j-taskiqscheduler>=1.0.1",
]

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-django/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-django/issues"
Source = "https://github.com/z4jdev/z4j-django"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_django"]
