[project]
name = "z4j-django"
version = "1.3.0"
description = "z4j Django framework adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "django", "celery", "task"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    # Floors bumped to >=1.1.0 for the v1.1.0 ecosystem family
    # release. The z4j-bare 1.1.0 release fixes the schedule.fire
    # dispatcher path that broke every brain-side scheduler tick
    # (pre-1.1 the agent rejected schedule.fire with "unrecognized
    # action" or "no scheduler adapter for None"). A 1.1.0 brain +
    # scheduler stack is unusable without z4j-bare>=1.1.0, so we
    # tighten the floor here to refuse a mixed install.
    "z4j-core>=1.3.0,<2",
    # 1.1.2 floor: z4j-bare 1.1.2 fixes the supervisor trapdoor
    # that left agents stuck offline after AuthenticationError or
    # ProtocolError, and adds the pidfile + SIGHUP infrastructure
    # that powers ``manage.py z4j_restart``.
    "z4j-bare>=1.3.0,<2",
    # Django 5.2 LTS is the newest Django line that still supports
    # Python 3.10 / 3.11. Django 6.0 dropped 3.11 support (requires
    # >=3.12). Pinning to the 5.2 LTS line keeps z4j-django installable
    # across our full 3.11 / 3.12 / 3.13 / 3.14 matrix. Django 5.2 is
    # itself LTS with security patches through April 2028.
    "django>=5.2.13",
]

[project.optional-dependencies]
# Canonical engine bundles. `pip install z4j-django[celery]` pulls
# the engine adapter AND its companion scheduler in one shot, so a
# fresh install never needs a second command.
celery   = ["z4j-celery>=1.3.0,<2",   "z4j-celerybeat>=1.3.0,<2"]
rq       = ["z4j-rq>=1.3.0,<2",       "z4j-rqscheduler>=1.3.0,<2"]
dramatiq = ["z4j-dramatiq>=1.3.0,<2", "z4j-apscheduler>=1.3.0,<2"]
huey     = ["z4j-huey>=1.3.0,<2",     "z4j-hueyperiodic>=1.3.0,<2"]
arq      = ["z4j-arq>=1.3.0,<2",      "z4j-arqcron>=1.3.0,<2"]
taskiq   = ["z4j-taskiq>=1.3.0,<2",   "z4j-taskiqscheduler>=1.3.0,<2"]
# Every engine in one shot - useful for CI matrices that exercise
# all adapters against a Django host.
all = [
    "z4j-celery>=1.3.0,<2",   "z4j-celerybeat>=1.3.0,<2",
    "z4j-rq>=1.3.0,<2",       "z4j-rqscheduler>=1.3.0,<2",
    "z4j-dramatiq>=1.3.0,<2", "z4j-apscheduler>=1.3.0,<2",
    "z4j-huey>=1.3.0,<2",     "z4j-hueyperiodic>=1.3.0,<2",
    "z4j-arq>=1.3.0,<2",      "z4j-arqcron>=1.3.0,<2",
    "z4j-taskiq>=1.3.0,<2",   "z4j-taskiqscheduler>=1.3.0,<2",
]

[project.scripts]
# 1.1.2+ console script. ``z4j-django <subcommand>`` works without
# loading Django settings (env-var only). For Django-flavored config
# loading use ``manage.py z4j_doctor`` etc. - both surfaces are
# supported and dispatch to the same shared diagnostics.
z4j-django = "z4j_django.cli:main"

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-django/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-django/issues"
Source = "https://github.com/z4jdev/z4j-django"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_django"]
